--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>first--app</title>
   </head>
   <body>
+    <h1>Todo List App</h1>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
